[package]
authors = ["Kotauskas <v.toncharov@gmail.com>", "Techcable <Techcable@techcable.net"]
edition = "2018"
name = "thin-trait-object-zerogc"
version = "0.1.0"
publish = false

license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/DuckLogic/thin-trait-object-zerogc"

description = "Garbage collected, one pointer wide trait objects which are also FFI safe, allowing traits to be passed to/from and implemented by C ABI code"

categories = ["development-tools::ffi", "rust-patterns", "no-std"]
keywords = ["ffi", "trait", "dyn", "virtual", "gc", "zerogc"]

[lib]
path = "./src/lib.rs"
proc-macro = true

[dependencies]
once_cell = "1.7"
proc-macro2 = "1.0"
quote = "1.0"
replace_with = "0.1"
# Sadly cannot use the default configuration because it can't parse traits
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dependencies.zerogc]
version = "0.2.0-alpha.4"

[features]
default = ["std"]
std = []

[profile.dev]
opt-level = 1 # Procedural macros are never compiled in release mode
